[gd_scene load_steps=4 format=3 uid="uid://bjql6dlrtm3ls"]

[ext_resource type="Script" path="res://testing/planetgenerationexperiment.gd" id="1_ts05o"]
[ext_resource type="Theme" uid="uid://dvqwgv7i0cjg" path="res://theme_smallfont_2x.tres" id="2_c1an6"]

[sub_resource type="ImageTexture" id="ImageTexture_pw6a8"]

[node name="PlanetGenerationExperiment" type="Node2D"]
script = ExtResource("1_ts05o")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 18.0
offset_top = 184.0
offset_right = 738.0
offset_bottom = 420.0
texture = SubResource("ImageTexture_pw6a8")
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 13.0
offset_top = 460.0
offset_right = 733.0
offset_bottom = 696.0
texture = SubResource("ImageTexture_pw6a8")
metadata/_edit_use_anchors_ = true

[node name="TextureRect3" type="TextureRect" parent="."]
offset_left = 748.0
offset_top = 435.0
offset_right = 948.0
offset_bottom = 635.0
texture = SubResource("ImageTexture_pw6a8")
metadata/_edit_use_anchors_ = true

[node name="ObjectsChartMap" type="TextureRect" parent="."]
offset_left = 746.0
offset_top = 669.0
offset_right = 946.0
offset_bottom = 869.0
texture = SubResource("ImageTexture_pw6a8")
metadata/_edit_use_anchors_ = true

[node name="TextureRect4" type="TextureRect" parent="."]
offset_left = 959.0
offset_top = 427.0
offset_right = 1159.0
offset_bottom = 627.0
texture = SubResource("ImageTexture_pw6a8")
metadata/_edit_use_anchors_ = true

[node name="SpacePalette" type="TextureRect" parent="."]
offset_left = 14.0
offset_top = 175.0
offset_right = 526.0
offset_bottom = 179.0
texture = SubResource("ImageTexture_pw6a8")
metadata/_edit_use_anchors_ = true

[node name="SurfacePalette" type="TextureRect" parent="."]
offset_left = 14.0
offset_top = 709.0
offset_right = 526.0
offset_bottom = 713.0
texture = SubResource("ImageTexture_pw6a8")
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
offset_left = 1175.0
offset_top = 20.0
offset_right = 1274.0
offset_bottom = 62.0
theme = ExtResource("2_c1an6")
text = "Generate!"
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="."]
offset_left = 1038.0
offset_top = 73.0
offset_right = 1274.0
offset_bottom = 115.0
theme = ExtResource("2_c1an6")
text = "Generate from parsis & index"
metadata/_edit_use_anchors_ = true

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = 14.0
offset_top = 19.0
offset_right = 584.0
offset_bottom = 62.0
theme = ExtResource("2_c1an6")
selected = 4
item_count = 11
popup/item_0/text = "1. Medium size, internally hot, unstable surface, no atmosphere."
popup/item_1/text = "2. Small, solid, dusty, craterized, no atmosphere."
popup/item_1/id = 1
popup/item_2/text = "3. Medium size, solid, thick atmosphere, fully covered by clouds."
popup/item_2/id = 2
popup/item_3/text = "4. Medium size, felisian, breathable atmosphere, suitable for life."
popup/item_3/id = 3
popup/item_4/text = "5. Medium size, rocky, creased, no atmosphere."
popup/item_4/id = 4
popup/item_5/text = "6. Small, solid, thin atmosphere."
popup/item_5/id = 5
popup/item_6/text = "7. Large, not consistent, covered with dense clouds."
popup/item_6/id = 6
popup/item_7/text = "8. Small, solid, icy surface, no atmosphere."
popup/item_7/id = 7
popup/item_8/text = "9. Medium size, surface is mainly native quartz, oxygen atmosphere."
popup/item_8/id = 8
popup/item_9/text = "10. Very large, substellar object, not consistent."
popup/item_9/id = 9
popup/item_10/text = "11. Companion star - not a planet. "
popup/item_10/id = 10
metadata/_edit_use_anchors_ = true

[node name="PlanetIndex" type="TextEdit" parent="."]
offset_left = 893.0
offset_top = 75.0
offset_right = 985.0
offset_bottom = 116.0
theme = ExtResource("2_c1an6")
text = "3"
placeholder_text = "planet index"
metadata/_edit_use_anchors_ = true

[node name="SeedInput" type="TextEdit" parent="."]
offset_left = 596.0
offset_top = 20.0
offset_right = 1023.0
offset_bottom = 61.0
theme = ExtResource("2_c1an6")
text = "607248.30769023"
placeholder_text = "seed - set this to generate based on predefined seed"
metadata/_edit_use_anchors_ = true

[node name="ParsisX" type="TextEdit" parent="."]
offset_left = 258.0
offset_top = 76.0
offset_right = 458.0
offset_bottom = 117.0
theme = ExtResource("2_c1an6")
text = "-18928"
placeholder_text = "parsis x"
metadata/_edit_use_anchors_ = true

[node name="ParsisY" type="TextEdit" parent="."]
offset_left = 468.0
offset_top = 76.0
offset_right = 668.0
offset_bottom = 117.0
theme = ExtResource("2_c1an6")
text = "29680"
placeholder_text = "parsis y (in \"NIV display coordinates\")"
metadata/_edit_use_anchors_ = true

[node name="ParsisZ" type="TextEdit" parent="."]
offset_left = 676.0
offset_top = 76.0
offset_right = 876.0
offset_bottom = 117.0
theme = ExtResource("2_c1an6")
text = "-67336"
placeholder_text = "parsis z"
metadata/_edit_use_anchors_ = true

[node name="Feltyrion" type="Feltyrion" parent="."]
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="LandingPtLon" type="HSlider" parent="."]
offset_left = 24.0
offset_top = 425.0
offset_right = 732.0
offset_bottom = 445.0
max_value = 359.0
value = 1.0
rounded = true
metadata/_edit_use_anchors_ = true

[node name="LandingPtLat" type="VSlider" parent="."]
offset_left = 774.0
offset_top = 428.0
offset_right = 838.0
offset_bottom = 672.0
rotation = 3.14159
min_value = 1.0
max_value = 119.0
value = 1.0
rounded = true
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = 560.0
offset_top = 446.0
offset_right = 654.0
offset_bottom = 472.0
theme = ExtResource("2_c1an6")
theme_override_font_sizes/font_size = 351
text = "lat/lon: 0:0"
